--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ google-api-python-client==2.108.0
 pandas==2.1.3
 requests==2.31.0
 python-dateutil==2.8.2
+python-dotenv==1.1.0
 urllib3==2.0.7
 certifi==2023.11.17
 charset-normalizer==3.3.2
